--- a/joketeller/build.gradle
+++ b/joketeller/build.gradle
@@ -1,7 +1,8 @@
 apply plugin: 'java'
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile 'org.json:org.json:chargebee-1.0'
 }
 
 sourceCompatibility = "1.7"
