Test asynctask. Call background task on button clicked on main activity

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,14 +57,15 @@ runEndpointsAndTests.finalizedBy ":backend:appengineStop"
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    // Added for AdMob
     compile project(':joketeller')
     compile project(':jokeAndroidLibrary')
     compile project(path: ':backend', configuration: 'android-endpoints')
     compile 'com.android.support:appcompat-v7:24.2.1'
-    compile 'com.google.android.gms:play-services-ads:9.6.0'
     compile 'com.google.code.findbugs:jsr305:2.0.1'
     compile 'com.android.support:support-v4:24.2.1'
     compile 'com.android.support:design:24.2.1'
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
+    freeCompile 'com.google.android.gms:play-services-ads:9.6.0'
+    testCompile 'junit:junit:4.12'
+    testCompile "org.mockito:mockito-core:1.9.5"
 }
